[wip] api: datasets
