# http/openapi.json
@@ -630,6 +630,9 @@
                         "value"
                       ]
                     }
+                  },
+                  "timestamp": {
+                    "type": "string"
                   }
                 },
                 "required": [
@@ -1662,7 +1665,21 @@
                   "type": "array",
                   "items": {
                     "type": "object",
-                    "additionalProperties": {}
+                    "properties": {
+                      "time": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "number"
+                      },
+                      "category": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "time",
+                      "value"
+                    ]
                   }
                 }
               }
@@ -1773,6 +1790,138 @@
                 },
                 "required": [
                   "metric",
+                  "timeRange",
+                  "granularity"
+                ]
+              }
+            }
+          }
+        },
+        "parameters": [
+          {
+            "schema": {
+              "type": "string"
+            },
+            "in": "path",
+            "name": "id",
+            "required": true
+          }
+        ]
+      }
+    },
+    "/api/reports/{id}/dataset": {
+      "post": {
+        "operationId": "postApiReports:idDataset",
+        "tags": [
+          "Reports"
+        ],
+        "summary": "Query a Report's dataset",
+        "responses": {
+          "200": {
+            "description": "Dataset data",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "additionalProperties": {}
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Error response",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "required": [
+                    "error"
+                  ]
+                }
+              }
+            }
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "metrics": {
+                    "type": "array",
+                    "items": {
+                      "type": "string"
+                    }
+                  },
+                  "timeRange": {
+                    "type": "object",
+                    "properties": {
+                      "start": {
+                        "type": "string"
+                      },
+                      "end": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "start",
+                      "end"
+                    ]
+                  },
+                  "granularity": {
+                    "enum": [
+                      "100ms",
+                      "200ms",
+                      "250ms",
+                      "500ms",
+                      "second",
+                      "minute",
+                      "5minute",
+                      "10minute",
+                      "15minute",
+                      "30minute",
+                      "hour",
+                      "2hour",
+                      "4hour",
+                      "6hour",
+                      "12hour",
+                      "day",
+                      "3day",
+                      "7day",
+                      "15day",
+                      "30day",
+                      "45day",
+                      "60day",
+                      "90day"
+                    ]
+                  },
+                  "attribution": {
+                    "type": "object",
+                    "properties": {
+                      "type": {
+                        "type": "string"
+                      },
+                      "value": {
+                        "type": "string"
+                      }
+                    },
+                    "required": [
+                      "type",
+                      "value"
+                    ]
+                  }
+                },
+                "required": [
+                  "metrics",
                   "timeRange",
                   "granularity"
                 ]
